front-bugfix titles are now aligned properly

--- a/front/src/components/Profil/style-desktop.scss
+++ b/front/src/components/Profil/style-desktop.scss
@@ -12,6 +12,7 @@
       color: white;
       font-size: 2rem;
       padding: 1rem;
+      text-align: center;
     }
 
     &__card
